feat: enhance version management system
- Add dynamic version display in API and web interface
- Update routes to use imported version from setuptools_scm
- Add version management commands to Makefile
- Create comprehensive version management documentation
- Update README with version management instructions

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -191,7 +191,7 @@
         </ul>
 
         <div class="footer">
-            <p>HTTPilot v0.1.0 - Built with Flask</p>
+            <p>HTTPilot v{{ version }} - Built with Flask</p>
         </div>
     </div>
 </body>
