[2025-09-17] support different methods for status codes

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -175,13 +175,21 @@
         <div class="collapsible-content">
             <div class="endpoint">
                 <span class="method get">GET</span>
+                <span class="method post">POST</span>
+                <span class="method put">PUT</span>
+                <span class="method patch">PATCH</span>
+                <span class="method options">OPTIONS</span>
                 <code>/status/&lt;code&gt;</code>
-                <div class="description">Return response with specific HTTP status code (e.g., /status/404)</div>
+                <div class="description">Return response with specific HTTP status code (e.g., /status/404). Supports multiple HTTP methods.</div>
             </div>
             <div class="endpoint">
                 <span class="method get">GET</span>
+                <span class="method post">POST</span>
+                <span class="method put">PUT</span>
+                <span class="method patch">PATCH</span>
+                <span class="method options">OPTIONS</span>
                 <code>/status/random</code>
-                <div class="description">Return response with random status code</div>
+                <div class="description">Return response with random status code. Supports multiple HTTP methods.</div>
             </div>
         </div>
 
